gnome-characters: Autospec creation for update from version 3.26.1 to version 3.26.2
Daiki Ueno (2):
      window: Fix error when searching on recently used page
      Release 3.26.2

Gil Forcada (1):
      Add ca@valencia

Matej Urbančič (1):
      Updated Slovenian translation

Pawan Chitrakar (1):
      Update Nepali translation

Xavi Ivars (1):
      [l10n] Updated Catalan (Valencian) translation

3.26.2
===

- window: Fix error when searching on recently used page

New And Updated Translations
============================
Matej UrbanÄiÄ (sl)
Pawan Chitrakar (ne)
Xavi Ivars (ca@valencia)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+3.26.2
+===
+
+- window: Fix error when searching on recently used page
+
+New And Updated Translations
+============================
+Matej Urbančič (sl)
+Pawan Chitrakar (ne)
+Xavi Ivars (ca@valencia)
+
 3.26.1
 ===
 
