[update to 3.28.2] libgc: Fix crasher with some GCC configurations
Bastien Nocera (1):
      libgc: Fix crasher with some GCC configurations

Daiki Ueno (2):
      libgc: Suppress compiler warning
      Release 3.28.2

Daniel Șerbănescu (1):
      Update Romanian translation

Dz Chen (1):
      Update Chinese (China) translation

Piotr Drąg (1):
      window: Update copyright year in the about dialog

Rafael Fontenelle (1):
      Update Brazilian Portuguese translation

3.28.2
===

- libgc: Fix crasher with some GCC configurations

New And Updated Translations
============================
Daniel ÈerbÄnescu (ro)
Dz Chen (zh_CN)
Rafael Fontenelle (pt_BR)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+3.28.2
+===
+
+- libgc: Fix crasher with some GCC configurations
+
+New And Updated Translations
+============================
+Daniel Șerbănescu (ro)
+Dz Chen (zh_CN)
+Rafael Fontenelle (pt_BR)
+
 3.28.0
 ===
 
