--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+3.30.0
+===
+
+- Re-enable GNOME Shell search provider by default
+
+3.29.91
+===
+
+- Port to modern JavaScript
+- build: Drop autotools support
+
+New And Updated Translations
+============================
+Claude Paroz (fr)
+Pieter Schalk Schoeman (af)
+Piotr Drąg (pl)
+Waldo Luís Ribeiro (en_GB)
+
 3.28.2
 ===
 
