[update to 3.32.0] Fix Keywords in Slovenian translation
Alan Mortensen (1):
      Updated Danish translation

Alexander Mikhaylenko (1):
      menu: Use GtkModelButton for About item

Anders Jonsson (1):
      Update Swedish translation

Andre Klapper (1):
      Replace Bugzilla by Gitlab URL in DOAP file

Asier Sarasua Garmendia (1):
      Update Basque translation

Aurimas Černius (1):
      Updated Lithuanian translation

Balázs Úr (1):
      Update Hungarian translation

Baurzhan Muftakhidinov (1):
      Update Kazakh translation

Carmen Bianca BAKKER (1):
      Update Esperanto translation

Charles Monzat (2):
      Update French translation
      Update French translation

Christian Stadelmann (1):
      Fix JavaScript deprecation warnings

DaeHyun Sung (2):
      Update Korean translation
      Update Korean translation

Daniel Mustieles (1):
      Updated Spanish translation

Daniel Șerbănescu (1):
      Update Romanian translation

Efstathios Iosifidis (1):
      Update Greek translation

Fabio Tomat (1):
      Update Friulian translation

Fran Dieguez (1):
      Update Galician translation

Jakub Steiner (1):
      icon: update app icon

Jeremy Bicha (2):
      snap: use grade:stable
      snap: Update for new icon filename

Jiri Grönroos (1):
      Update Finnish translation

Kalev Lember (1):
      Release 3.32.0

Ken VanDine (2):
      snap: Updated for core18
      snap: improved layout for xkb rules

Kukuh Syafaat (1):
      Update Indonesian translation

Marek Cernocky (1):
      Updated Czech translation

Mart Raudsepp (2):
      build: Raise gjs minimum dep for ES6 classes
      build: Fix license metadata passed to meson project call

Matej Urbančič (1):
      Added Slovenian translation

Milo Casagrande (1):
      Update Italian translation

Nathan Follens (1):
      Update Dutch translation

Pieter Schalk Schoeman (1):
      Update Afrikaans translation

Piotr Drąg (3):
      menu: Fix translatable attribute
      Update Polish translation
    

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+3.32.0
+===
+
+- Update the icon to follow the GNOME 3.32 guidelines
+- Remove app menu following GNOME 3.32 guidelines
+- Fix various javascript deprecation warnings
+- Translation updates
+
 3.30.0
 ===
 
