gnome-characters: Autospec creation for update from version 3.32.1 to version 3.34.0
Alan Mortensen (1):
      Updated Danish translation

Anders Jonsson (1):
      Update Swedish translation

Asier Sarasua Garmendia (1):
      Update Basque translation

Ask Hjorth Larsen (2):
      Updated Danish translation
      Updated Danish translation

Aurimas Černius (1):
      Updated Lithuanian translation

Balázs Úr (1):
      Update Hungarian translation

Bastien Nocera (1):
      Fix deprecation warnings

Carmen Bianca BAKKER (1):
      Update Esperanto translation

DaeHyun Sung (1):
      Update Korean translation

Daiki Ueno (1):
      Release 3.34.0

Danial Behzadi (1):
      Update Persian translation

Daniel Korostil (1):
      Update Ukrainian translation

Daniel Mustieles (1):
      Updated Spanish translation

Dz Chen (1):
      Update Chinese (China) translation

Efstathios Iosifidis (1):
      Update Greek translation

Fabio Tomat (1):
      Update Friulian translation

Fran Dieguez (1):
      Update Galician translation

Goran Vidović (2):
      Update Croatian translation
      Update Croatian translation

Heather Ellsworth (1):
      snap: Update yaml to use GNOME extension

Jan Alexander Steffens (heftig) (1):
      searchProvider: Fix deprecation fixes

Javier Jardón (1):
      build-aux/flatpak/org.gnome.Characters.json: Update gnome-desktop

Jiri Grönroos (1):
      Update Finnish translation

Jordi Mas (1):
      Update Catalan translation

Ken VanDine (2):
      snap: dropped layout for iso-codes
      snap: move under build-aux, use appstream metadata and use gjs from the gnome content snap

Kjartan Maraas (1):
      Update Norwegian Bokmål translation

Kukuh Syafaat (1):
      Update Indonesian translation

Marek Černocký (1):
      Updated Czech translation

Paul Court (3):
      Adds remembering the previously selected row and capability to restore that selection.
      Sets improved window title when searching and restores previously selected cat

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,11 @@
-3.32.1
+3.34.0
 ===
 
-- searchProvider: Fix deprecation fixes
+- searchProvider: Fix deprecation fixes [!31]
+- Improves search entry and exit behaviour [!35]
+- Fix deprecation warnings [!36]
+- Fix single instance application mode [!42]
+- Snap and flatpak fixes [!37, !40]
 - Translation updates
 
 3.32.0
