gnome-characters: Autospec creation for update from version 40.0 to version 41.0
Adrien Plazas (1):
      window: Show the close button on the sidebar

Alan Mortensen (1):
      Updated Danish translation

Alexey Rubtsov (1):
      Update Russian translation

Bruce Cowan (1):
      Update British English translation

Changwoo Ryu (1):
      Update Korean translation

Chao-Hsiung Liao (1):
      Update Chinese (Taiwan) translation

Christopher Davis (1):
      Prepare release 41.0

Efstathios Iosifidis (1):
      Update Greek translation

Pawan Chitrakar (1):
      Update Nepali translation

Quentin PAGÈS (1):
      Update Occitan translation

Ridhubharan Venkatachalam (1):
      Update Tamil translation

Tjipke van der Heide (1):
      Add Frisian translation

Yosef Or Boczko (1):
      Update Hebrew translation

Źmicier Turok (1):
      Update Belarusian translation

41.0
=======

* Bugs fixed:
 - !57 window: Show the close button on the sidebar (Adrien Plazas)

* Translation updates:
 - Belarusian
 - Chinese (Taiwan)
 - Danish
 - English (United Kingdom)
 - Greek, Modern (1453-)
 - Hebrew
 - Korean
 - Nepali

(NEWS truncated at 15 lines)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+41.0
+=======
+
+* Bugs fixed:
+ - !57 window: Show the close button on the sidebar (Adrien Plazas)
+
+* Translation updates:
+ - Belarusian
+ - Chinese (Taiwan)
+ - Danish
+ - English (United Kingdom)
+ - Greek, Modern (1453-)
+ - Hebrew
+ - Korean
+ - Nepali
+ - Occitan (post 1500)
+ - Russian
+ - Tamil
+ - Western Frisian
+
 40.0
 =======
 
