gnome-characters: Autospec creation for update from version 41.0 to version 42.0
Alan Mortensen (1):
      Updated Danish translation

Aleksandr Melman (2):
      Update Russian translation
      Update Russian translation

Alexander Mikhaylenko (17):
      characters view: smooth scrolling
      characters view: use borders color for baseline
      Stop handling wide chars
      gen-scripts: Sort scripts
      gen-scripts: Add comments on where to get the inputs
      gen-scripts: Add iso15924 codes
      gen-emoji: Document input
      gen-confusables: Document input
      lib: Add a script for generating unicode name table
      lib: Add a script for generating blocks
      lib: Add a script for generating jamo character table
      lib: Add a script to regenerate all headers
      lib: Regenerate headers
      lib: Port to glib
      Update to Unicode 14.0.0, CLDR 40
      lib: Regenerate headers
      characterView: Fix reflowing in size_allocate()

Alexander Shopov (1):
      Add Bulgarian translation

Asier Sarasua Garmendia (2):
      Update Basque translation
      Update Basque translation

Aurimas Černius (2):
      Updated Lithuanian translation
      Updated Lithuanian translation

Balázs Úr (1):
      Update Hungarian translation

Baurzhan Muftakhidinov (1):
      Update Kazakh translation

Bilal Elmoussaoui (84):
      flatpak: bump to newer gnome-desktop
      lib-gc: drop gtk dependency
      require newer versions of the dependencies
      switch to Adw instead of Hdy namespace
      don't subclass GtkListBox
      make it run with gtk4
      port to Adw.Application
      UI: remove useless properties
      category list: fix GtkImage api usage
      flatpak: give it access to dri
      window: fix post wrapping listbox in a bin usage
      about dialog: stop handling response signal
      window: fix post wrapping listbox in a bin usage post fix
      make use of new css helper
      category list: drop the whole params mess
      category list: s

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,55 @@
+42.0
+===========
+* Port to GTK4 / libadwaita
+* Fixes & improvements to the search provider
+* Translation updates
+
+42.rc
+===========
+* Fix reflowing in size_allocate() (Alexander Mikhaylenko)
+* Translation updates:
+ - Bulgarian
+ - Croatian
+ - Danish
+ - Finnish
+ - French
+ - Friulian
+ - Korean
+ - Lithuanian
+ - Persian
+ - Polish
+ - Swedish
+
+42.beta
+===========
+
+* Fixed search provider issues
+* Search provider now displays the characters as well
+
+42.alpha
+===========
+
+Characters 42.alpha comes with a port to GTK4 and libadwaita. It has
+gained support for the new dark style preference via libadwaita.
+
+* Translation updates:
+ - Basque
+ - Croatian
+ - Friulian
+ - Galician
+ - Hebrew
+ - Icelandic
+ - Indonesian
+ - Latvian
+ - Lithuanian
+ - Occitan (post 1500)
+ - Portuguese
+ - Portuguese (Brazil)
+ - Russian
+ - Slovak
+ - Spanish
+ - Ukrainian
+
 41.0
 =======
 
