--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,83 @@
+43.0
+===========
+* Add support for composite emoji (Alexander Mikhaylenko)
+* Use AdwAboutWindow for an adaptive about window (Christopher Davis)
+* Translation updates:
+ - Abkhazian
+ - Basque
+ - Bulgarian
+ - Catalan
+ - Chinese (China)
+ - Chinese (Taiwan)
+ - Croatian
+ - Czech
+ - Danish
+ - Dutch
+ - English (United Kingdom)
+ - Finnish
+ - French
+ - Friulian
+ - Galician
+ - Georgian
+ - German
+ - Hebrew
+ - Hungarian
+ - Icelandic
+ - Indonesian
+ - Korean
+ - Latvian
+ - Lithuanian
+ - Nepali
+ - Occitan (post 1500)
+ - Persian
+ - Polish
+ - Portuguese
+ - Portuguese (Brazil)
+ - Russian
+ - Santali
+ - Serbian
+ - Slovenian
+ - Spanish
+ - Swedish
+ - Turkish
+ - Ukrainian
+
+43.rc
+===========
+* Translation updates:
+ - Catalan
+ - Chinese (Taiwan)
+ - Croatian
+ - Czech
+ - Danish
+ - Finnish
+ - Galician
+ - Hungarian
+ - Lithuanian
+ - Polish
+ - Portuguese (Brazil)
+ - Slovenian
+
+43.beta
+===========
+* Translations updates
+
+43.alpha
+===========
+* Add support for composite emoji (Alexander Mikhaylenko)
+* Use AdwAboutWindow for an adaptive about window (Christopher Davis)
+* Translation updates:
+ - Dutch
+ - English (United Kingdom)
+ - Georgian
+ - Icelandic
+ - Indonesian
+ - Persian
+ - Portuguese
+ - Russian
+ - Swedish
+ - Ukrainian
+
 42.0
 ===========
 * Port to GTK4 / libadwaita
