--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+43.1
+===========
+* Update to Unicode 15 (Alex Mikhaylenko)
+* Translation updates:
+ - Abkhazian
+ - Dutch
+ - Greek, Modern (1453-)
+ - Hebrew
+ - Icelandic
+
 43.0
 ===========
 * Add support for composite emoji (Alexander Mikhaylenko)
