gnome-characters: Autospec creation for update from version 44.0 to version 45.0
Alan Mortensen (1):
      Update Danish translation

Alexander Mikhaylenko (1):
      Port to AdwNavigationView and AdwNavigationSplitView

Alice Mikhaylenko (7):
      window: Expand search entry to the full width
      window: Remove max sidebar width
      Update to Unicode 15.0.1 and CLDR 43
      gc: Add cjk extension I
      characterDialog: Fix selecting related characters
      characterDialog: Simplify clearing the listbox
      characterDialog: Don't visibly replace related rows during animation

Amn Alam (1):
      Update Punjabi translation

Anders Jonsson (1):
      Update Swedish translation

Artur So (1):
      Update Russian translation

Asier Sarasua Garmendia (1):
      Update Basque translation

Aurimas Černius (1):
      Update Lithuanian translation

Automeris naranja (2):
      window: Set Main Menu button as primary
      shortcuts: Improve strings

Balázs Úr (1):
      Update Hungarian translation

Baurzhan Muftakhidinov (1):
      Update Kazakh translation

Bilal Elmoussaoui (4):
      flatpak: Make it compatible with latest CI template changes
      flatpak: Switch away from deprecated app-id
      flatpak: Update noto-emoji font
      Bump release to 45.0

Boyuan Yang (1):
      Update Chinese (China) translation

Bruce Cowan (1):
      Update British English translation

Christian Hergert (10):
      lib: pre-compile termlist keyword lengths
      lib: ensure get_character_name() always \0 terminates string
      lib: fix potential leak of buffer for character name
      lib: use strstr() directly
      lib: inline parsing of hex code-point
      lib: reduce calls to g_task_return_error_if_cancelled()
      lib: plug leak of utf-8 encoded string
      lib: avoid utf-8 conversion and allocation in hot path
      searchProvider: reduce MAX_SEARCH_RESULTS to 20
      util: use Gio.Settings.new_full()

Christopher Davis (5):
      build: Post-release version bump

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,28 @@
+45.alpha
+========
+* Update for Unicode 15.0.1 (Alice Mikhaylenko)
+* Add support for new Unicode CJK extensions (Alice Mikhaylenko)
+* Bugs fixed:
+  - #82 Unable to search and display the character "䷿" U+4DFF (Jeremias Ortega)
+  - #96 The "Latin Small Letter Long S" (ſ — U+017F) is missing from the
+    application (Jeremias Ortega)
+  - #113 Nonspacing marks should not be considered invisible (Jeremias Ortega)
+  - #124 44.rc: search provider crashes on shutdown (Marco Trevisan (Treviño))
+
+* Translation updates:
+  - Chinese (China) (Boyuan Yang)
+  - Dutch (Nathan Follens)
+  - English (United Kingdom) (Bruce Cowan)
+  - French (Guillaume Bernard)
+  - Greek, Modern (1453-) (Efstathios Iosifidis)
+  - Icelandic (Sveinn í Felli)
+  - Italian (Gianvito Cavasoli)
+  - Portuguese (Brazil) (Leônidas Araújo)
+  - Slovak (Dušan Kazik)
+
 44.0
 =======
-* Update for Unicode 15 (Alexander Mikhaylenko)
+* Update for Unicode 15 (Alice Mikhaylenko)
 * Misc. string updates (Automeris naranja)
 * Avoid downscaling search result icon (Andrew Mayorov)
 * Use action-name properties (Sabri Ünal)
@@ -72,7 +94,7 @@
 
 44.beta
 ===========
-* Update for Unicode 15 (Alexander Mikhaylenko)
+* Update for Unicode 15 (Alice Mikhaylenko)
 * Misc. string updates (Automeris naranja)
 * Avoid downscaling search result icon (Andrew Mayorov)
 * Use action-name properties (Sabri Ünal)
@@ -88,7 +110,7 @@
 
 43.0
 ===========
-* Add support for composite emoji (Alexander Mikhaylenko)
+* Add support for composite emoji (Alice Mikhaylenko)
 * Use AdwAboutWindow for an adaptive about window (Christopher Davis)
 * Translation updates:
  - Abkhazian
@@ -152,7 +174,7 @@
 
 43.alpha
 ===========
-* Add support for composite emoji (Alexander Mikhaylenko)
+* Add support for composite emoji (Alice Mikhaylenko)
 * Use AdwAboutWindow for an adaptive about window (Christopher Davis)
 * Translation updates:
  - Dutch
@@ -174,7 +196,7 @@
 
 42.rc
 ===========
-* Fix reflowing in size_allocate() (Alexander Mikhaylenko)
+* Fix reflowing in size_allocate() (Alice Mikhaylenko)
 * Translation updates:
  - Bulgarian
  - Croatian
