gnome-characters: Autospec creation for update from version 45.0 to version 46.0
Aefgh Threenine (1):
      Add Thai translation

Alice Mikhaylenko (2):
      lib: Update to Emoji 15.1
      lib: Update to CLDR 44

Andi Chandler (1):
      Update British English translation

Athmane MOKRAOUI (1):
      Add Kabyle translation

Brage Fuglseth (1):
      Update Norwegian Bokmål translation

Daniel Mustieles (1):
      Updated Spanish translation

Jeremias Ortega (1):
      meson: Bump libadwaita

Juliano de Souza Camargo (1):
      Update Brazilian Portuguese translation

Kristjan SCHMIDT (1):
      Update Esperanto translation

Maximiliano Sandoval (3):
      appdata: Turn 45.alpha into 45.0
      appdata: Add contribute link
      general: Prepare release 46.0

Prasanta Hembram (1):
      Update Santali translation

Rūdolfs Mazurs (1):
      Update Latvian translation

Sabri Ünal (3):
      Update Turkish translation
      appdata: Improve appdata for AppStream 1.0
      Update Turkish translation

Sophie Herold (1):
      metainfo: Fix wrong developer id

Марко Костић (1):
      Update Serbian translation

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+46.0
+====
+* Update to CLDR 44 (Alice Mikhaylenko)
+* Update to Emoji 15.1 (Alice Mikhaylenko)
+* Improve appdata for AppStream 1.0 (Sabri Ünal)
+* Translation updates:
+  - British (Andi Chandler)
+  - Turkish (Sabri Ünal)
+  - Serbian (Марко Костић)
+  - Spanish (Daniel Mustieles)
+  - Esperanto (Kristjan SCHMIDT)
+
 45.alpha
 ========
 * Update for Unicode 15.0.1 (Alice Mikhaylenko)
